# CrosscoderLens

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/crosscoder_lens/: __init__.py  config.py  model.py  trainer.py  visualization.py
tests/: conftest.py  helpers.py  test_crosscoder.py  test_trainer.py
tutorials/: training_a_crosscoder.ipynb
