[project]
name = "crosscoder-lens"
version = "0.1.0"
description = "A library for training Sparse Crosscoders with SAELens"
authors = [
    {name = "Tom Pollak"}
]
dependencies = [
    "einops>=0.8.0",
    "jaxtyping>=0.2.36",
    "torch>=2.5.1",
    "transformer-lens>=2.9.1",
    "transformers>=4.46.3",
    "wandb>=0.18.7",
    "sae-lens @ git+ssh://git@github.com/tom-pollak/SAELens.git@dev/crosscoders",
    "tiny-dashboard>=0.2.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.0.284",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crosscoder_lens"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E741",  # ambiguous variable name
    "F401",  # unused import
    "F403",  # 'from module import *' used
    "F405",  # name may be undefined from star imports
    "F722",  # syntax error in forward annotation
    "E731",  # do not assign a lambda expression
    "E402",  # module level import not at top of file
    "B905",  # zip with strict=False
]
